--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
   </head>
   <body>
     <div class="box">
-      <div class="bread-top"></div>
+      <div class="bread-top">
+        <div class="seeds"></div>
+        <div class="seeds2"></div>
+      </div>
       <div class="salad"></div>
+      <div class="salad"></div>
+      <div class="bacon"></div>
+      <div class="cheese"></div>
+      <div class="cheese"></div>
+      <div class="meat"></div>
       <div class="bread-bottom"></div>
     </div>
   </body>
